clean up warnings in BackupManagerTest